--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <!--<app-dashboard></app-dashboard>-->
 <!--<app-crear-cuenta></app-crear-cuenta>-->
 <!--<app-modificar-cuenta></app-modificar-cuenta>-->
-<app-crear-user></app-crear-user>
-<app-footer></app-footer>
+<!--<app-crear-user></app-crear-user>-->
+<!--<app-footer></app-footer>-->
+<router-outlet></router-outlet>
