--- a/src/app/componentes/crear-user/crear-user.component.html
+++ b/src/app/componentes/crear-user/crear-user.component.html
@@ -1,21 +1,32 @@
-<div class="container my-5 ">
-  <h1 class="">Creacion de Nuevo Usuario</h1>
-  <form method="post" action="http://127.0.0.1:8000/api/register">
-    <div class="input-group mb-3 ">
-      <span class="input-group-text" id="name">User</span>
-      <input type="text" class="form-control" name="name" placeholder="name" aria-label="Username"
-             aria-describedby="name">
-    </div>
-    <div class="input-group mb-3 ">
-      <span class="input-group-text" id="basic-addon1">@</span>
-      <input type="email" class="form-control" name="email" placeholder="email" aria-label="Username"
-             aria-describedby="basic-addon1">
-    </div>
-    <div class="input-group mb-3 col-md-6">
-      <span class="input-group-text" id="basic-addon2">#</span>
-      <input type="password" class="form-control" name="password" placeholder="Contraseña" aria-label="Contraseña"
-             aria-describedby="basic-addon2">
-    </div>
-    <button class="btn btn-secondary" type="submit">Registrar</button>
-  </form>
+
+<div class="container-fluid">
+  <div class="registera">
+    <form class="custom-form" method="post">
+      <h1>Registro Nuevos Usuarios</h1>
+      <input
+        type="text"
+        [(ngModel)]="name"
+        name="name"
+        placeholder="nombre de usuario"
+        required="required"
+      />
+      <input
+        type="email"
+        [(ngModel)]="email"
+        name="email"
+        placeholder="Email"
+        required="required"
+      />
+      <input
+        type="password"
+        [(ngModel)]="password"
+        name="password"
+        placeholder="Password"
+        required="required"
+      />
+
+      <button type="submit" (click)="register()">Register</button>
+    </form>
+  </div>
 </div>
+<app-footer></app-footer>
