--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -14,10 +14,10 @@ h1 {
 .custom-form {
   min-width: 300px;
   max-width: 60%;
-  margin: 0px auto;
+  margin:  auto;
   background: rgba(255, 255, 255, 0.15);
   padding: 2rem 3rem;
-  margin: auto;
+
   border-radius: 2.5rem;
   background-color: #ecf0f3;
   box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #ffffff;
@@ -43,7 +43,7 @@ h1 {
   font-size: 0.875rem;
   color: #ffffff;
   font-weight: bold;
-  background-color: #bcd8c1;
+  background-color: #0d6efd;
   width: 100%;
   display: block;
   padding: 0.875rem 1rem;
